--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -5,8 +5,8 @@
   <form class="form-login" action="/authenticate" method="POST">
     <h2 class="form-login-heading">pacemaker<br>sign in now</h2>
     <div class="login-wrap">
-      <input type="text" class="form-control" name="email" placeholder="Email"><br>
-      <input type="password" class="form-control" name="password" placeholder="Password">		               
+      <input type="text" class="form-control" name="email" placeholder="Email" size="32" maxlength="32" required><br>
+      <input type="password" class="form-control" name="password" placeholder="Password" size="32" maxlength="32" required>		               
       <button class="btn btn-theme btn-block" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
 	  <hr>
     </div>
