--- a/app/views/postactivity.scala.html
+++ b/app/views/postactivity.scala.html
@@ -36,45 +36,45 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Location</label>
                 <div class="col-sm-5">
-                  <input type="text" class="form-control" name="location" placeholder="Location">	
+                  <input type="text" class="form-control" name="location" placeholder="Location" size="32" maxlength="32" required>	
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-3 control-label">Distance</label>
                 <div class="col-sm-5">
-                  <input type="text" class="form-control" name="distance" placeholder="Distance (km)">	               
+                  <input type="text" class="form-control" name="distance" placeholder="Distance (km)" size="32" maxlength="32" required>	               
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-3 control-label">Date of Activity</label>
                 <div class="col-sm-5">
-                  <input type="date" class="form-control" name="date" placeholder="Date">		               
+                  <input type="date" class="form-control" name="date" placeholder="Date" size="32" maxlength="32" required>		               
                 </div>
               </div> 
               <div class="form-group">
                 <label class="col-sm-3 control-label">Duration</label>
                 <div class="col-sm-5">
-                  <input type="text" class="form-control" name="duration" placeholder="Duration">		               
+                  <input type="text" class="form-control" name="duration" placeholder="Duration" size="32" maxlength="32" required>		               
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-3 control-label">Average Speed</label>
                 <div class="col-sm-5">
-                  <input type="text" class="form-control" name="averageSpeed" placeholder="Average Speed">		               
+                  <input type="text" class="form-control" name="averageSpeed" placeholder="Average Speed" size="32" maxlength="32" required>		               
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-3 control-label">Calories Burned</label>
                 <div class="col-sm-5">
-                  <input type="text" class="form-control" name="caloriesBurned" placeholder="Calories Burned">		               	               
+                  <input type="text" class="form-control" name="caloriesBurned" placeholder="Calories Burned" size="32" maxlength="32" required>		               	               
                 </div>
               </div>
-            </div>
-          </div>
-          <div style="margin: 15px">
-            <div class="form-group">
-              <div class="col-sm-5 col-sm-offset-3">
-                <button class="btn btn-default" type="submit"><i class="fa fa-upload"></i> Upload</button>
+              <div style="margin: 15px">
+                <div class="form-group">
+                  <div class="col-sm-5 col-sm-offset-3">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-upload"></i> Upload</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -89,6 +89,5 @@
         </div>
       </div>  
     </div>
-    @footer()
   </div>
 }
