--- a/app/views/reports.scala.html
+++ b/app/views/reports.scala.html
@@ -40,7 +40,7 @@
         </div>  	
                  
       <div class="centered">
-	    <h2>All Cardio</h2>
+	    <h2>Cardio</h2>
 	  </div>
       <div class="row">
         <div class="col-md-12 mb">
